@@ -9,7 +9,7 @@ import org.testcontainers.containers.Network;
 import org.testcontainers.containers.wait.strategy.Wait;
 
 import java.net.URL;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class AssimblyGatewayBrokerContainer {
 
@@ -43,13 +43,17 @@ public class AssimblyGatewayBrokerContainer {
     }
 
     private static String getResourcePath() {
-        URL resource = AssimblyGatewayBrokerContainer.class.getClassLoader().getResource("container");
+
+        URL resource = Thread.currentThread().getContextClassLoader().getResource("container");
+
         try {
-            return Paths.get(resource.toURI()).toString();
+            assert resource != null;
+            return Path.of(resource.toURI()).toString();
         } catch (Exception e) {
             log.error("Error to copy files to container", e);
             return null;
         }
+
     }
 
     public String getBrokerBaseUrl() {
