@@ -1,5 +1,7 @@
 package org.assimbly.integration.impl.manager;
 
+import java.util.*;
+
 import org.apache.camel.CamelContext;
 import org.apache.camel.spi.Registry;
 import org.apache.camel.support.SimpleRegistry;
@@ -27,7 +29,6 @@ import java.net.URI;
 import java.net.URL;
 import java.security.KeyStoreException;
 import java.security.cert.Certificate;
-import java.util.*;
 
 public class SSLManager {
 
@@ -109,15 +110,11 @@ public class SSLManager {
 
     // get mutual ssl info from props
     public Map<String, String> getMutualSSLInfoFromProps(TreeMap<String, String> props) {
-        for (Map.Entry<String, String> entry : props.entrySet()) {
-            String xml = entry.getValue();
-            if (!xml.startsWith("<")) {
-                // skip prop if it's not an xml
-                continue;
-            }
-            return getMutualSSLInfoFromXml(xml);
-        }
-        return Collections.emptyMap();
+        return props.values().stream()
+                .filter(xml -> xml.startsWith("<"))
+                .findFirst()
+                .map(this::getMutualSSLInfoFromXml)
+                .orElseGet(HashMap::new);
     }
 
     // get mutual ssl info from xml
@@ -145,9 +142,9 @@ public class SSLManager {
         try {
             DocumentBuilder builder = factory.newDocumentBuilder();
             Document doc = builder.parse(new InputSource(new StringReader(xml)));
-            String expression = String.format("//setProperty[@name='%s']/constant/text()", propName);
+            String expression = "//setProperty[@name='%s']/constant/text()".formatted(propName);
             return xpath.evaluate(expression, doc);
-        } catch (Exception e) {
+        } catch (Exception _) {
             return null;
         }
 
